docs: add swagger docs :memo:
