# src/infra/http/routes.ts
@@ -8,5 +8,6 @@ const businessController = new BusinessController();
 routes.get('/', (request, response) => response.json({ ok: true }));
 routes.post('/business/integration', businessController.create);
 routes.get('/business', businessController.index);
+routes.get('/business/:id', businessController.show);
 
 export default routes;
